updated API and OpenApi
