# project/api/schemas.py
@@ -1,7 +1,7 @@
 from project import db
 from project.api import bp
 from project.api.errors import bad_request, error_response
-from flask import request, jsonify
+from flask import request, jsonify, Response
 from project.models import Schema
 
 
@@ -9,7 +9,7 @@ from project.models import Schema
 def add_schema():
     data = request.get_json() or {}
     if 'name' not in data or 'schema' not in data:
-        return bad_request('must include schema and schema name')
+        return error_response(422, 'bad data input, must include schema and schema name')
     if Schema.query.filter_by(name=data['name']).first():
         return error_response(409, 'schema name already saved')
     if 'extended' in data:
@@ -24,12 +24,9 @@ def add_schema():
     return response
 
 
-@bp.route('/remove_schema', methods=['DELETE'])
-def remove_schema():
-    data = request.get_json() or {}
-    if 'name' not in data:
-        return bad_request('must include the schema name')
-    schema = Schema.query.filter_by(name=data['name']).first()
+@bp.route('/remove_schema/<int:id>', methods=['DELETE'])
+def remove_schema(id):
+    schema = Schema.query.filter_by(id=id).first()
     if schema is None:
         return error_response(404, 'schema not found')
     db.session.delete(schema)
@@ -39,22 +36,22 @@ def remove_schema():
     return response
 
 
-@bp.route('/update_schema', methods=['POST'])
+@bp.route('/update_schema', methods=['PUT'])
 def update_schema():
     data = request.get_json() or {}
     if 'name' not in data or 'schema' not in data:
-        return bad_request('must include schema and schema name')
+        return error_response(422, 'bad data input, must include schema and schema name')
     schema = Schema.query.filter_by(name=data['name']).first()
     if schema is None:
         return error_response(404, 'schema not found')
     schema.from_dict(data)
     db.session.commit()
     response = jsonify(schema.to_dict())
-    response.status_code = 201
+    response.status_code = 204
     return response
 
 
-@bp.route('/get_schema/<int:schema_name>', methods=['GET'])
+@bp.route('/get_schema/<string:schema_name>', methods=['GET'])
 def get_schema2(schema_name):
     schema = Schema.query.get_or_404(schema_name)
     return jsonify(schema.schema)
@@ -77,4 +74,14 @@ def get_schema():
     response.status_code = 200
     return response
 
+
+@bp.route('get_schema_list', methods=['GET'])
+def get_schema_list():
+    schemas = Schema.query.all()
+    if schemas is None:
+        return error_response(404, 'schemas not found')
+    schemas_dict = {k: v for k, v in ((schema.id, schema.name) for schema in schemas)}
+    response = jsonify(schemas_dict)
+    response.status_code = 200
+    return response
 
